// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectionInput > renders correctly 1`] = `
<span
  class="regular-input-wrapper"
  data-v-6810ab92=""
  dense="true"
>
  <selection-menu-stub
    checkbox="true"
    data-v-6810ab92=""
    dense="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    flat="false"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hasactions="false"
    hidesearch="true"
    hideselectall="false"
    inverted="false"
    isgrouped="true"
    issingleselect="true"
    itemdisabled="[Function]"
    itemflag="string"
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext="string"
    itemtertiarytext="string"
    itemtertiarytextclasses=""
    itemtext="name"
    itemvalue="id"
    loading="true"
    menuopen="false"
    menuyoffset="-22px"
    modelvalue=""
    numericorderby="true"
    removenonexistentselections="true"
    required="true"
    searchbysecondarytext="false"
    someselected="false"
    usecustomsorting="false"
    width="338px"
  />
</span>
`;

exports[`SelectionInput > renders correctly when menuOpen prop is true 1`] = `
<span
  class="regular-input-wrapper"
  data-v-6810ab92=""
  dense="true"
>
  <selection-menu-stub
    checkbox="true"
    data-v-6810ab92=""
    dense="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    flat="false"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hasactions="false"
    hidesearch="true"
    hideselectall="false"
    inverted="false"
    isgrouped="true"
    issingleselect="true"
    itemdisabled="[Function]"
    itemflag="string"
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext="string"
    itemtertiarytext="string"
    itemtertiarytextclasses=""
    itemtext="name"
    itemvalue="id"
    loading="true"
    menuopen="true"
    menuyoffset="-22px"
    modelvalue=""
    numericorderby="true"
    removenonexistentselections="true"
    required="true"
    searchbysecondarytext="false"
    someselected="false"
    usecustomsorting="false"
    width="338px"
  />
</span>
`;

exports[`SelectionInput > renders correctly when useChips is true 1`] = `
<span
  class=""
  data-v-6810ab92=""
  dense="true"
>
  <selection-menu-stub
    checkbox="true"
    data-v-6810ab92=""
    dense="true"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    flat="false"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hasactions="false"
    hidesearch="true"
    hideselectall="false"
    inverted="false"
    isgrouped="true"
    issingleselect="true"
    itemdisabled="[Function]"
    itemflag="string"
    itemgroupidkey="groupId"
    items=""
    itemsecondarytext="string"
    itemtertiarytext="string"
    itemtertiarytextclasses=""
    itemtext="name"
    itemvalue="id"
    loading="true"
    menuopen="false"
    menuyoffset="8px"
    modelvalue=""
    numericorderby="true"
    removenonexistentselections="true"
    required="true"
    searchbysecondarytext="false"
    someselected="false"
    usecustomsorting="false"
    width="338px"
  />
</span>
`;
